--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -30,7 +30,7 @@
 		<hr>
 
 		<h3><strong>Question 1</strong></h3>
-		<h4>You are always calm and collected even under pressure.</h4>
+		<h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
 	 	<select data-placeholder="" class="chosen-select" id="q1">
 	 		<option value=""></option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -41,7 +41,7 @@
       	</select>
 
 		<h3><strong>Question 2</strong></h3>
-		<h4>You see yourself as one of the "cool kids."</h4>
+		<h4>Generally speaking, you rely more on your experience than your imagination.</h4>
 	 	<select data-placeholder="" class="chosen-select" id="q2">
 	 		<option value=""></option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -53,7 +53,7 @@
 
 
 		<h3><strong>Question 3</strong></h3>
-		<h4>You are always finding ways to have fun! Even if it gets you into trouble.</h4>
+		<h4>You find it easy to stay relaxed and focused even when there is some pressure.</h4>
 	 	<select data-placeholder="" class="chosen-select" id="q3">
 	 		<option value=""></option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -65,7 +65,7 @@
 
 
 		<h3><strong>Question 4</strong></h3>
-		<h4>You work hard and never complain.</h4>
+		<h4>You rarely do something just out of sheer curiosity.</h4>
 	 	<select data-placeholder="" class="chosen-select" id="q4">
 	 		<option value=""></option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -89,7 +89,7 @@
 
 
 		<h3><strong>Question 6</strong></h3>
-		<h4>You always help people work out their differences.</h4>
+		<h4>It is often difficult for you to relate to other people’s feelings.</h4>
 	 	<select data-placeholder="" class="chosen-select" id="q6">
 	 		<option value=""></option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -101,7 +101,7 @@
 
 
 		<h3><strong>Question 7</strong></h3>
-		<h4>You are an optimist.</h4>
+		<h4>In a discussion, truth should be more important than people’s sensitivities.</h4>
 	 	<select data-placeholder="" class="chosen-select" id="q7">
 	 		<option value=""></option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -112,7 +112,7 @@
       	</select>
 
 		<h3><strong>Question 8</strong></h3>
-		<h4>You love to be the center of attention.</h4>
+		<h4>You rarely get carried away by fantasies and ideas.</h4>
 	 	<select data-placeholder="" class="chosen-select" id="q8">
 	 		<option value=""></option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -123,7 +123,7 @@
       	</select>
 
 		<h3><strong>Question 9</strong></h3>
-		<h4>You are sensible and pragmatic.</h4>
+		<h4>You feel more energetic after spending time with a group of people.</h4>
 	 	<select data-placeholder="" class="chosen-select" id="q9">
 	 		<option value=""></option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -134,7 +134,7 @@
       	</select>
 
 		<h3><strong>Question 10</strong></h3>
-		<h4>Sometimes you feel like you are invisible.</h4>
+		<h4>You value your alone time as much as time with others.</h4>
 	 	<select data-placeholder="" class="chosen-select" id="q10">
 	 		<option value=""></option>
             <option value="1">1 (Strongly Disagree)</option>
