--- a/app/public/home.html
+++ b/app/public/home.html
@@ -29,7 +29,7 @@
 
 	    <footer class="footer">
 	      <div class="container">
-		        <p><a href="/api/friends">Friends List</a> | <a href="https://github.com/suzpaylor/FriendFinder">GitHub Repo</a></p>
+		        <p><a href="https://github.com/chrishibby75/friend_finder">GitHub Repo</a></p>
 	      </div>
 	    </footer>
 
