--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -241,7 +241,7 @@
 		}
 		else
 		{
-			alert("Please fill out all fields before submitting!");
+			alert("Please be sure to complete the form before moving on.");
 		}
     	
     	return false;
